dist/1.0/bin/sample/retrieveUnpackaged/objects/Order_Snapshot_Gross_Install__c.object
<CustomObject>
    <description>Object used to store information for Order snapshot report</description>
    <fields>
        <fullName>Actual_Disconnection_Date__c</fullName>
        <label>Actual Disconnection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Installation_Date__c</fullName>
        <label>Actual Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Recurring_Price__c</fullName>
        <label>Difference in Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Opportunity_Category__c</fullName>
        <label>Opportunity Category</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_No__c</fullName>
        <label>Order No</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Record_Type__c</fullName>
        <label>Order Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Stage__c</fullName>
        <label>Order Stage</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Status__c</fullName>
        <label>Order Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>Order Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_No__c</fullName>
        <label>Request No</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Record_Type__c</fullName>
        <label>Request Record Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <description>Date, when snapshot was executed</description>
        <inlineHelpText>Date, when snapshot was executed</inlineHelpText>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>Order Snapshot Gross Install</label>
    <nameField>
        <label>Order Snapshot Gross Install Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Snapshots Gross Install</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>